# staubli_tx60_controller

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  staubli.launch
action/: SetCartesian.action  SetJointTrajectory.action  SetJoints.action
include/: TX60L.h  servicesManager.h  soapStub.h  staubliJointStatePublisher.h  staubliState.h
include/.svn/: all-wcprops  entries
include/.svn/text-base/: controller.h.svn-base
include/action_managers/: setCartesianAction.h  setCartesianActionManager.h  setGenericJointTrajectoryActionManager.h  setJointTrajectoryAction.h  setJointTrajectoryActionManager.h  setJointsAction.h  setJointsActionManager.h  staubliActionManager.h  staubliControlActionManager.h  staubliControlActionManager.hpp
include/staubli_tx60_api/: TX60L.h  soapStub.h
launch/: staubli.launch
msg/: JointTrajectoryPoint.msg  SetCartesianAction.msg  SetCartesianActionFeedback.msg  SetCartesianActionGoal.msg  SetCartesianActionResult.msg  SetCartesianFeedback.msg  SetCartesianGoal.msg  SetCartesianResult.msg  SetJointsAction.msg  SetJointsActionFeedback.msg  SetJointsActionGoal.msg  SetJointsActionResult.msg  SetJointsFeedback.msg  SetJointsGoal.msg  StaubliMovementParams.msg
msg/lisp/staubliTX60/: .SetJointsActionResult.asd-dep  .SetJointsGoal.asd-dep  SetCartesianAction.lisp  SetCartesianActionFeedback.lisp  SetCartesianActionGoal.lisp  SetCartesianActionResult.lisp  SetCartesianFeedback.lisp  SetCartesianGoal.lisp  SetCartesianResult.lisp  SetJointsAction.lisp  SetJointsActionFeedback.lisp  SetJointsActionGoal.lisp  SetJointsActionResult.lisp  SetJointsFeedback.lisp  SetJointsGoal.lisp  SetJointsResult.lisp  _package.lisp  _package_SetCartesianAction.lisp  _package_SetCartesianActionFeedback.lisp  _package_SetCartesianFeedback.lisp  _package_SetCartesianGoal.lisp  _package_SetCartesianResult.lisp  _package_SetJointsActionGoal.lisp  _package_SetJointsActionResult.lisp  _package_SetJointsFeedback.lisp  _package_SetJointsGoal.lisp  staubliTX60-msg.asd
src/: #testing_client.cpp#  lab_IPs.txt  servicesManager.cpp  staubliJointStatePublisher.cpp  staubliTX60_server.cpp  staubliTX60_server.cpp~  staubli_tx60_server.cpp  test_trajectory_client.py  testing_client.cpp  wave.cpp
src/action_managers/: setCartesianActionManager.cpp  setGenericJointTrajectoryActionManager.cpp  setJointTrajectoryActionManager.cpp  setJointsActionManager.cpp  staubliControlActionManager.cpp
src/away/: tracking_srv.cpp
src/staubliTX60/msg/: _SetCartesianAction.py  _SetCartesianActionFeedback.py  _SetCartesianActionGoal.py  _SetCartesianActionResult.py  _SetCartesianFeedback.py  _SetCartesianGoal.py  _SetCartesianResult.py  _SetJointsAction.py  _SetJointsActionFeedback.py  _SetJointsActionGoal.py  _SetJointsActionResult.py  _SetJointsFeedback.py  _SetJointsGoal.py  _SetJointsResult.py  __init__.py
src/staubliTX60/srv/: _FwdKinematics.py  _GetCartesian.py  _GetJoints.py  _GetRotMat.py  _InvKinematics.py  __init__.py
src/staubliTX60_api/: TX60L.cpp
srv/: FwdKinematics.srv  GetCartesian.srv  GetJoints.srv  GetRotMat.srv  InvKinematics.srv  SetTrajectoryParams.srv
srv/lisp/staubliTX60/: FwdKinematics.lisp  GetCartesian.lisp  GetJoints.lisp  GetRotMat.lisp  InvKinematics.lisp  _package.lisp  _package_FwdKinematics.lisp  _package_GetCartesian.lisp  _package_GetJoints.lisp  _package_GetRotMat.lisp  _package_InvKinematics.lisp  staubliTX60-srv.asd
staubli_tx60_api/: CMakeLists.txt
staubli_tx60_api/include/: TX60L.h
staubli_tx60_api/src/: TX60L.cpp
test/: testing_client.cpp
