<package>
  <name>staubli_tx60</name>
  <version>1.0.0</version>
  <description>staubli_tx60</description>
  <author>Wei-Chun Yuan</author>
  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/staubliTX60</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp_serialization</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>roscpp_serialization</build_depend>




  <export>
    <cpp cflags="-I${prefix}/msg_gen/cpp -I${prefix}/srv_gen/cpp"/>
  </export>

</package>


